--- a/command_bootstrap/WebContent/WEB-INF/web.xml
+++ b/command_bootstrap/WebContent/WEB-INF/web.xml
@@ -1,13 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app>
-	
-	<context-param>
-		<param-name>testParam</param-name>
-		<param-value>Good Day!</param-value>
-	</context-param>
-	
-	<listener>
-		<listener-class>kr.or.ddit.listener.ApplicationContextInitListener</listener-class>
-	</listener>
-	
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:web="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
+  <context-param>
+    <param-name>contextConfigLocation</param-name>
+    <param-value>classpath:kr/or/ddit/context/application-context.xml</param-value>
+  </context-param>
+  <listener>
+    <listener-class>kr.or.ddit.listener.ApplicationContextInitListener</listener-class>
+  </listener>
 </web-app>
